# kws_pico

./: .gitignore  CMakeLists.txt  README.md
tflite-micro/: .gitignore  CMakeLists.txt  project_files.cmake  setup_pico.sh
tflite-micro/build_pico/: .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake
tflite-micro/build_pico/examples/hello_world/: cmake_install.cmake  hello_world.hex  hello_world_test.hex  output_handler_test.hex
tflite-micro/build_pico/examples/person_detection/: cmake_install.cmake  detection_responder_test.hex  image_provider_test.hex  person_detection.hex  person_detection_benchmark.hex  person_detection_test.hex
tflite-micro/build_pico/pico-sdk/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/docs/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/common/boot_picobin_headers/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/common/boot_picoboot_headers/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/common/boot_uf2_headers/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/common/hardware_claim/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/common/pico_base_headers/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/common/pico_binary_info/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/common/pico_bit_ops_headers/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/common/pico_divider_headers/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/common/pico_stdlib_headers/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/common/pico_sync/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/common/pico_time/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/common/pico_usb_reset_interface_headers/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/common/pico_util/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2350/boot_stage2/: bs2_default_padded_checksummed.S  cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2350/hardware_regs/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2350/hardware_structs/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2350/pico_platform/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/boot_bootrom_headers/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/cmsis/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_adc/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_base/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_boot_lock/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_clocks/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_dcp/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_divider/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_dma/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_exception/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_flash/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_gpio/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_i2c/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_interp/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_irq/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_pio/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_pll/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_powman/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_pwm/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_rcp/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_resets/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_riscv_platform_timer/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_sha256/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_spi/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_sync/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_sync_spin_lock/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_ticks/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_timer/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_uart/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_vreg/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_watchdog/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_xip_cache/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/hardware_xosc/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/pico_aon_timer/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/pico_async_context/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/pico_atomic/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/pico_bit_ops/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/pico_bootrom/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/pico_bootsel_via_double_reset/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/src/rp2_common/pico_btstack/: cmake_install.cmake
tflite-micro/build_pico/pico-sdk/tools/: cmake_install.cmake
tflite-micro/examples/hello_world/: CMakeLists.txt  main_functions.cpp
tflite-micro/examples/person_detection/: CMakeLists.txt
tflite-micro/tensorflow/lite/micro/bluepill/: debug_log.cc
(+45 files in other folders)
